syntax = "proto3";

import "studenttpb/student.proto";

package test;

option go_package = "platzi.co/go/grpc/testpb";

message Test {
  string id = 1;
  string name = 2;
}

message GetTestRequest{
  string id = 1;
}

message SetTestResponse{
  string id = 1;
  string name = 2;
}

message Question{
  string id = 1;
  string answer = 2;
  string question = 3;
  string test_id = 4;
}

message SetQuestionResponse{
  bool ok = 1;
}

message EnrollmentRequest{
  string student_id = 1;
  string test_id = 2;
}

message GetStudentsPerTestRequest{
  string id = 1;
}

service TestService{
  rpc GetTest(GetTestRequest) returns (Test);
  rpc SetTest(Test) returns (SetTestResponse);
  rpc SetQuestions(stream Question) returns (SetQuestionResponse);
  rpc EnrollmentStudents(stream EnrollmentRequest) returns (SetQuestionResponse);
  rpc GetStudentsPerTest(GetStudentsPerTestRequest) returns (stream student.Student);
}